# sports-chatbot-DLMAIPAIUC01

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/sports_chatbot/: Day_1.csv
src/chat_app/: chat.py
src/sports_chatbot/: chatbot.py  dataset.py  semantic_matcher.py
tests/sports_chatbot/: conftest.py  test_chatbot.py  test_dataset.py  test_semantic_matcher.py
